--- a/modules/ROOT/pages/6.7.2-release-notes.adoc
+++ b/modules/ROOT/pages/6.7.2-release-notes.adoc
@@ -51,11 +51,31 @@ As a result, the `<summary>` element now accommodates phrasing content or a sing
 // CCFR
 
 
-=== List items containing a nested list between two text caused some list operations to fail.
+=== Indenting or outdenting a list item that contained non list item siblings after it would result in those siblings being removed.
 // TINY-10268
+Previously, when the editor encounter's a list inside an `<li>` element, the editor would only account for scenarios where the list is either the first or last element within the `<li>`. In such cases, {productname} would treat the content contained within the `<li>` as plain HTML, disregarding any nested lists.
 
-// CCFR
+Consequently, when dealing with a structure like the following:
 
+[source,html]
+----
+<ul>
+  <li>
+    <p>A</p>
+    <ul>
+      <li>L1</li>
+      <li>L2</li>
+    </ul>
+    <p>B</p>
+  </li>
+</ul>
+----
+
+the editor would encounter problems when attempting to apply list-related actions, such as indentation, to the inner list.
+
+{productname} 6.7.2 addresses this issue, now, when an `<li>` contains both non-list elements at its beginning and end, and also contains a nested list, the editor now will consider actions on the nested list independently, instead of treating the entire content as a single block.
+
+As a result, the actions of indenting and unindenting a nested list now work as expected.
 
 === Removed use of async for editor rendering which caused visual blinking when reloading the editor in-place.
 // TINY-10249
