--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -10,7 +10,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 === Fixed
 * Applying heading formatting to the content of the `summary` element extended its application to the content of the parent `details` element.
 * The function `getModifierState` did not work on events passed through the editor as expected.
-* List items containing a nested list between two text caused some list operations to fail.
+* Indenting or outdenting a list item that contained non list item siblings after it would result in those siblings being removed.
 * Removed use of async for editor rendering which caused visual blinking when reloading the editor in-place.
 * Indenting or outdenting a list item that contained non list item siblings after it would result in those siblings being removed.
 
