--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,6 +4,28 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
+== 6.8 - (unreleased)
+
+=== Improved
+* Colorpicker now includes the Brightness/Saturation selector and hue slider in the keyboard navigable items. #TINY-9287
+* Improved the tooltips of picker buttons for the urlinput components in the "Insert/Edit Image" and "Insert/Edit Link" dialogs. #TINY-10155
+* Inline dialog will now respect size: 'large' argument in the dialog spec. #TINY-10209
+* SVG elements and their children are now retained when configured as valid elements. #TINY-10237
+* Bespoke dropdown toolbar buttons including align, fontfamily, fontsize, blocks, and styles did not include their visible text labels in their accessible names. #TINY-10147
+
+=== Fixed
+* Editor would convert urls that are not http/s or relative resulting in broken links. #TINY-10153
+* Calling the setProgressState API would cause the window to be scrolled when the editor wasn't fully visible. #TINY-10172
+* Applying heading formatting to the content of the summary element extended its application to the content of the parent details element. #TINY-10154
+* Setting the content with an attribute that contains a self-closing HTML tag did not preserve the tag. #TINY-10088
+* Screen readers now announce the selected color of forecolor and backcolor buttons. #TINY-9796
+* Resize handles would not appear on editable images in a non-editable context. #TINY-10118
+* The dialog size was not updated when the size argument was changed when redialling a dialog. #TINY-10209
+* Custom block element wasn't considered block element in some cases. #TINY-10139
+* An empty element with a contenteditable="true" attribute within a table cell would not be treated as content and get removed if backspace or delete was being pressed. #TINY-10010
+* Removing an LI element containing a details element would incorrectly merge its content. #TINY-10133
+* Search and replace plugin would incorrectly find matching text inside non-editable root elements. #TINY-10162
+* Search and replace plugin would incorrectly find matching text inside SVG elements. #TINY-10162
 
 == 6.7.1 - 2023-10-19
 
