--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -5,6 +5,14 @@
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
 
+== 6.7.2 - 2023-10-25
+
+=== Fixed
+* The function `getModifierState` did not work on events passed through the editor as expected.
+* Indenting or outdenting a list item that contained non list item siblings after it would result in those siblings being removed.
+* Removed use of async for editor rendering which caused visual blinking when reloading the editor in-place.
+* Toggling a list that contained a list item element — <li> — which, in turn, contained another list item element as its first child, removed other content within the first list item element.
+
 == 6.7.1 - 2023-10-19
 
 === Fixed
