--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -405,6 +405,10 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for TinyMCE 6]
+*** TinyMCE 6.8.3
+**** xref:6.8.2-release-notes.adoc#overview[Overview]
+**** xref:6.8.3-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
+**** xref:6.8.3-release-notes.adoc#bug-fixes[Bug fixes]
 *** TinyMCE 6.8.2
 **** xref:6.8.2-release-notes.adoc#overview[Overview]
 **** xref:6.8.2-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
