--- a/modules/ROOT/pages/release-notes.adoc
+++ b/modules/ROOT/pages/release-notes.adoc
@@ -11,6 +11,12 @@ This section lists the releases for {productname} 6 and the changes made in each
 
 a|
 [.lead]
+xref:6.8.3-release-notes.adoc#overview[{productname} 6.8.3]
+
+Release notes for {productname} 6.8.3
+
+a|
+[.lead]
 xref:6.8.2-release-notes.adoc#overview[{productname} 6.8.2]
 
 Release notes for {productname} 6.8.2
