--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -4,6 +4,12 @@
 
 NOTE: This is the {productname} Community version changelog. For information about the latest {cloudname} or {enterpriseversion} Release, see: xref:release-notes.adoc[{productname} Release Notes].
 
+== 6.8.3 - 2024-<month>-<date>
+
+=== Fixed
+* `ShadowDOM` skin was not loaded properly when used with js bundling feature.
+* The floating toolbar would not be fully visible when the editor was placed inside a scrollable container.
+
 == 6.8.2 - 2023-12-11
 
 === Fixed
