--- a/-new-material-templates/release-notes-template/ROOT/pages/<x.y[.z]>-release-notes.adoc
+++ b/-new-material-templates/release-notes-template/ROOT/pages/<x.y[.z]>-release-notes.adoc
@@ -24,6 +24,7 @@ include::partial$misc/admon-releasenotes-for-stable.adoc[]
 * xref:changes[Changes]
 * xref:bug-fixes[Bug fixes]
 * xref:security-fixes[Security fixes]
+* xref:deprecated[Deprecated]
 * xref:known-issues[Known issues]
 
 
@@ -66,56 +67,7 @@ The {productname} <x.y[.z]> release includes an accompanying release of the **<P
 
 // CCFR here.
 
-==== <Premium plugin name 1 change 2>
-
-// CCFR here.
-
-==== <Premium plugin name 1 change n>
-
-// CCFR here.
-
 For information on the **<Premium plugin name 1>** plugin, see: xref:<plugincode>.adoc[<Premium plugin name 1>].
-
-=== <Premium plugin name 2> <Premium plugin name 2 version>
-
-The {productname} <x.y[.z]> release includes an accompanying release of the **<Premium plugin name 2>** premium plugin.
-
-**<Premium plugin name 2>** <Premium plugin name 2 version> includes the following <fixes, changes, improvements>.
-
-==== <Premium plugin name 2 change 1>
-
-// CCFR here.
-
-==== <Premium plugin name 2 change 2>
-
-// CCFR here.
-
-==== <Premium plugin name 2 change n>
-
-// CCFR here.
-
-For information on the **<Premium plugin name 2>** plugin, see: xref:<plugincode>.adoc[<Premium plugin name 2>].
-
-=== <Premium plugin name n> <Premium plugin name n version>
-
-The {productname} <x.y[.z]> release includes an accompanying release of the **<Premium plugin name n>** premium plugin.
-
-**<Premium plugin name n>** <Premium plugin name n version> includes the following <fixes, changes, improvements>.
-
-==== <Premium plugin name n change 1>
-
-// CCFR here.
-
-==== <Premium plugin name n change 2>
-
-// CCFR here.
-
-==== <Premium plugin name n change n>
-
-// CCFR here.
-
-For information on the **<Premium plugin name n>** plugin, see: xref:<plugincode>.adoc[<Premium plugin name n>].
-
 
 
 [[accompanying-premium-plugin-end-of-life-announcement]]
@@ -152,16 +104,6 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 // CCFR here.
 
-=== <TINY-vwxyz 2 changelog entry>
-//#TINY-vwxyz2
-
-// CCFR here.
-
-=== <TINY-vwxyz n changelog entry>
-//#TINY-vwxyzn
-
-// CCFR here.
-
 
 [[additions]]
 == Additions
@@ -173,31 +115,11 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 // CCFR here.
 
-=== <TINY-vwxyz 2 changelog entry>
-//#TINY-vwxyz2
-
-// CCFR here.
-
-=== <TINY-vwxyz n changelog entry>
-//#TINY-vwxyzn
-
-// CCFR here.
-
 [[changes]]
 == Changes
 
 === <TINY-vwxyz 1 changelog entry>
 //#TINY-vwxyz1
-
-// CCFR here.
-
-=== <TINY-vwxyz 2 changelog entry>
-//#TINY-vwxyz2
-
-// CCFR here.
-
-=== <TINY-vwxyz n changelog entry>
-//#TINY-vwxyzn
 
 // CCFR here.
 
@@ -212,15 +134,22 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 // CCFR here.
 
-=== <TINY-vwxyz 2 changelog entry>
-//#TINY-vwxyz2
+[[security-fixes]]
+== Security fixes
+
+{productname} <x.y[.z]> includes <a fix | fixes for the following security issue<s>:
+
+=== <TINY-vwxyz 1 changelog entry>
+//#TINY-vwxyz1
 
 // CCFR here.
 
-=== <TINY-vwxyz n changelog entry>
-//#TINY-vwxyzn
+[[deprecated]]
+== Deprecated
 
-// CCFR here.
+=== The `<plugin>` configuration property, `<name>`, has been deprecated
+
+// placeholder here.
 
 
 [[known-issues]]
@@ -234,34 +163,3 @@ There <is one | are <number> known issue<s> in {productname} <x.y[.z]>.
 //#TINY-vwxyz1
 
 // CCFR here.
-
-=== <TINY-vwxyz 2 changelog entry>
-//#TINY-vwxyz2
-
-// CCFR here.
-
-=== <TINY-vwxyz n changelog entry>
-//#TINY-vwxyzn
-
-// CCFR here.
-
-[[security-fixes]]
-== Security fixes
-
-{productname} <x.y[.z]> includes <a fix | fixes for the following security issue<s>:
-
-=== <TINY-vwxyz 1 changelog entry>
-//#TINY-vwxyz1
-
-// CCFR here.
-
-=== <TINY-vwxyz 2 changelog entry>
-//#TINY-vwxyz2
-
-// CCFR here.
-
-=== <TINY-vwxyz n changelog entry>
-//#TINY-vwxyzn
-
-// CCFR here.
-
