--- a/modules/ROOT/pages/migration-from-6x.adoc
+++ b/modules/ROOT/pages/migration-from-6x.adoc
@@ -3,19 +3,21 @@
 :description: Guidance for migrating from TinyMCE 6 to TinyMCE 7
 :keywords: migration, considerations, premigration, pre-migration
 
-The process for setting up a basic TinyMCE 7 instance is the same as TinyMCE 6.
+The process for setting up a basic {productname} 7 instance is the same as {productname} 6.
 
 Most configuration changes in {productname} 7.0 only affect complex use cases, such as custom plugins and customized user interface components.
 
 This chapter describes the settings that require updating prior to migration; and workaround procedures for deprecated, deleted, and updated features.
 
-It set outs the {productname} 7.0 changes that customers using TinyMCE 6 should be aware of as part of upgrading.
+It set outs the {productname} 7.0 changes that customers using {productname} 6 should be aware of as part of upgrading.
 
 NOTE: For support related to migration, please contact https://support.tiny.cloud/hc/en-us/requests/new[Tiny support].  +
 Open Source users: please report issues in the https://github.com/tinymce/tinymce/[TinyMCE GitHub Repository].
 
-== Contents
+[[overview]]
+== Overview
 
+* xref:breaking-changes[Breaking changes]
 * xref:apis[APIs]
 * xref:commands-and-queries[Commands and queries]
 * xref:options[Options]
@@ -28,37 +30,202 @@ Open Source users: please report issues in the https://github.com/tinymce/tinymc
 
 For additional details on {productname} 7.0 changes, see xref:7.0-release-notes.adoc[{productname} 7.0 release notes].
 
+
+[[breaking-changes]]
+== Breaking Changes
+
+=== Renaming of inconsistent CSS file name changes for `bundling` {productname}
+
+In {productname} 6.8, a new feature was introduced that allowed bundling of multiple CSS files together into a single `js` file.
+
+{productname} 7.0 addresses the issues by updating the below inconsistent file names from {productname}'s Premium Plugins.
+
+[cols="1,1", options="header"]
+|===
+| Old File Path Name | New File Path Name
+| `a11ychecker/css/annotations.css` | `a11ychecker/css/annotations.min.css`
+| `advcode/codemirror.min.css` | `advcode/css/codemirror.min.css`
+| `linkchecker/content.min.css` | `linkchecker/css/content.min.css`
+| `mediaembed/content.min.css` | `mediaembed/css/content.min.css`
+| `mentions/css/mentions.css` | `mentions/css/mentions.min.css`
+| `pageembed/css/empa30.css` | `pageembed/css/empa30.min.css`
+| `revisionhistory/css/revisionhistory.css` | `revisionhistory/css/revisionhistory.min.css`
+| `tinycomments/css/tinycomments.css` | `tinycomments/css/tinycomments.min.css`
+|===
+
+[NOTE]
+Customers that updated their `bundling` code after the release of {productname} 6.8, should update their file name paths for the above specific plugins if set in their init configuration.
+
+
 [[apis]]
 == APIs
-
-...
 
 [[commands-and-queries]]
 == Commands and queries
 
-...
-
 [[options]]
 == Options
 
-...
+=== `sandbox_iframes`
+
+Previous Security penetration testing surfaced a security issue with {productname} loading iframes `unsandboxed` which asa. result could allow arbitrary code execution inside {productname} content.
+
+As a result, a configuration option was introduced in {productname} 6.8 to sandbox `(to isolate)` iframes and prevent javascript from executing code inside {productname} documents.
+
+The config option is currently set to `opt in`.
+
+{productname} 7.0, the default value of the `sandbox_iframes` configuration option will be changed from `false` to `true`, making it `opt out` instead of `opt in` for their editors.
+
+[IMPORTANT]
+The premium **Enhanced Media Embed** plugin uses `iframes` extensively and are currently no workarounds available except to keep a record of allowed sources.
+
+Customers who want to continue to use **Enhanced Media Embed** plugin in {productname} 7.0 will be required to add the option `sandbox_iframes: false` to their {productname} init configuration.
+
+.Example
+[source, js]
+----
+tinymce.init({
+  selector: "textarea",
+	sandbox_iframes: false,
+});
+----
+
+This follows our policy that we ship the most secure version of {productname} possible, while giving our customers the opportunity to make informed decisions on dialing back protections to a level that fits their use-case.
+
+=== `convert_unsafe_embeds`
+
+A previous Security penetration test surfaced a security issue with {productname} regarding object tags, which was a legacy method of inserting an external resource, such as a video, a PDF.
+
+{productname} has determined that the object tag is regarded as unsafe, as it may execute javascript inside the {productname} content.
+
+{productname} has a configuration option that converts object tags to modern equivalents such as `<img>, <video>` and `<audio>` tags, such as;
+
+.Example of before/after conversion.
+[source, html]
+----
+<!-- Before Conversion -->
+<object type="video/mp4" data="https://sneak-preview.tiny.cloud/3adc27b5-bb2f-49f0-9ccc-72b7c48313b0/bad.mov"></object>
+
+<!-- After Conversion -->
+<video src="https://sneak-preview.tiny.cloud/3adc27b5-bb2f-49f0-9ccc-72b7c48313b0/bad.mov" controls="controls"></video>
+----
+
+In {productname} 7.0 by default;
+
+* all object tags will be converted by default by loading the editor.
+* the `convert_unsafe_embeds` option default value will change from `false` to `true` making it opt out instead of opt in.
+
+[NOTE]
+To prevent automatic conversion of content, customers are advised to add `convert_unsafe_embeds: false` to their {productname} init configuration.
+
+[[highlight-on-focus]]
+=== `highlight_on_focus`
+
+Previously, the default value for the editor configuration option `highlight_on_focus` was set to `false` by default. In {productname} 7.0 this option is now by default set to `true`
+
+As a result, the focus outline for the editor will by default be displayed when the focus is on the editor.
+
+Customers who have created their own custom skins, or have implemented their own outline and wish to not to use the default one will need to add the `highlight_on_focus: false` option to their {productname} configuration.
+
+[NOTE]
+This change does not impact editors using inline mode.
+
+[[force-hex-color]]
+=== `force_hex_color`
+
+Previously in {productname} 6, all colors in the content HTML where set to use `RGB` values by default. As the common practice is using `hex` values this change will be **reverted**.
+
+.Example
+[source, html]
+----
+<!-- example using RGB values -->
+<p>Hello <span style="color: rgb(255, 0, 0);">red</span> color</p>
+
+<!-- example using HEX values -->
+<p>Hello <span style="color: #ff0000">red</span> color</p>
+----
+
+In {productname} 7.0, the default will be reverted back to using `hex` values by default.
+
+[IMPORTANT]
+The option `force_hex_color` will be deprecated and removed in a later version of {productname}.
+
+[[Changes-to-text-pattern-defaults-to-trigger-on-Space-key-press]]
+=== Changes to `text-pattern` defaults to trigger on `Space` key press.
+
+Applying basic formats such as headings, lists, bold and italic while typing are considered core functionality for WYSIWYG Editor's. {productname}'s default behavior for applying these format styles was applied on `Enter`, not `Space`.
+
+{productname} 7 introduces changes to the default behavior for `text-patterns` so that on **Space** key the editor triggers a xref:modules/ROOT/partials/configuration/text_patterns.adoc#block-patterns[block pattern] rather then on `Enter` key press.
+
+[NOTE]
+Customers who want to keep the old behavior need to update their config with the text pattern option using enter as trigger key.
+
+.new text patterns
+[source, ts]
+----
+default: [
+  { start: '#', format: 'h1', trigger: 'space' },
+  { start: '##', format: 'h2', trigger: 'space' },
+  { start: '###', format: 'h3', trigger: 'space' },
+  { start: '####', format: 'h4', trigger: 'space' },
+  { start: '#####', format: 'h5', trigger: 'space' },
+  { start: '######', format: 'h6', trigger: 'space' },
+  { start: '1.', cmd: 'InsertOrderedList', trigger: 'space' },
+  { start: '*', cmd: 'InsertUnorderedList', trigger: 'space' },
+  { start: '-', cmd: 'InsertUnorderedList', trigger: 'space' },
+  { start: '>', cmd: 'mceBlockQuote', trigger: 'space' },
+  { start: '---', cmd: 'InsertHorizontalRule', trigger: 'space' },
+]
+----
 
 [[plugins]]
 == Plugins
 
-...
+
+[[plugins-paste]]
+=== Paste
+
+[[deprecated-plugins]]
+== Deprecated Plugins
+
+In {productname} 7.0 the below list is a list of deprecated plugins, config options and APIs according to the following list:
+
+=== Template plugin
+
+The open-source `Template` plugin and associated config options have been removed in {productname} 7.0.
+
+However, this plugin was replaced with the **Advanced Template** plugin, see: xref:advanced-templates.adoc[Advanced Template] for more details.
+
+=== Export plugin
+
+[[deprecated-options]]
+== Deprecated Options
+
+=== `remove_trailing_brs` option removed from our `DomParser` API
+
+The `remove_trailing_brs` option was moved to the serializer and the existing option is no longer the best way to remove the relevant tags.
+
+[NOTE]
+We’re not deleting anything, the capability still exists for users that have added this option to their {productname} configuration.
+
 
 [[schema]]
 == Schema
 
-...
 
 [[ui-and-ux-elements-and-components]]
 == UI and UX elements and components
 
-...
+=== Improved how styles are applied when resizing rows and columns for Tables.
+
+Previously added numerous style elements when resizing table rows and columns such as on the `table element`, `tr elements`, and `td elements`. This resulted in unappealing HTML output.
+
+{productname} 7.0 addresses this, now, the height input field has been moved from the `cell` properties dialog to the `row` properties dialog. Now, when an existing table is resized using the drag handles or the row properties dialog, inline css height declarations will be be stripped from cells and table elements and only applied on rows.
+
+[NOTE]
+{productname} 7.0 does not provide any fallback to revert to the old behavior.
 
 [[security]]
 == Security
 
-...
+include::partial$security/sanitizing-html-input-and-protecting-against-xss-attacks-dom-parser-and-dom-purify.adoc[]
